clusters/main/kubernetes/system/networkpolicies/app/snapshot-controller-allow-ingress-webhook.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-webhook
  namespace: snapshot-controller
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: snapshot-controller
      app.kubernetes.io/name: snapshot-controller
      pod.name: main
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
